hphp/test/slow/serialization/repo_types_004.php.expectf
Notice: Unable to unserialize: [O:4:"Foob":1:{s:7:"]. Property x for class Foob was deserialized with type (Object) that didn't match what we inferred in static analysis. in %s/test/slow/serialization/repo_types_004.php on line 21
bool(false)

Catchable fatal error: Argument 1 passed to main() must be an instance of Foob, bool given in %s/test/slow/serialization/repo_types_004.php on line 24
